k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ewos-backend
  namespace: ewos
spec:
  selector:
    app: ewos-backend
  ports:
    - port: 80
      targetPort: http
      name: http
  type: ClusterIP
